# rs_syn_scanner

./: Cargo.toml  README.md
src/: cli_parser.rs  main.rs
