[package]
name = "port-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
spinners = "4.1.1"
tokio = { version = "1", features = ["full"] }
pnet = "0.34.0"
pnet_base = "0.34.0"
pnet_datalink = "0.34.0"
pnet_packet = "0.34.0"
pnet_transport = "0.34.0"
rand = "0.8.5"
futures = "0.3.30"
